--- a/new/contact.html
+++ b/new/contact.html
@@ -45,16 +45,32 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll active"><a href="#navigation">Home</a></li> 
-						<li class="scroll"><a href="#about-us">About Us</a></li> 
-						<li class="scroll"><a href="#services">Products</a></li> 
+						<li class="scroll"><a href="#navigation">Home</a></li>
+						<li class="scroll"><a href="#about-us">About Us</a></li>						
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Testimonials</a></li> 
+						<li class="scroll"><a href="#clients">Testimonials</a></li>
+						<li><a href="catalog.html">Products</a></li> 
+						<li class="scroll active"><a href="contact.html">Contact</a></li>
 					</ul> 
 				</div> 
 			</div> 
 		</div><!--/navbar--> 
 	</header> <!--/#navigation--> 
+
+	<section id="contactInformation">
+		<div class="container">
+			<div class="text-center">
+				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px;">
+					<h2 class="title-one animated bounceInRight">Contact Information</h2>
+					<p class="animated bounceInLeft">(408) 436-7940</p>
+					<p class="animated bounceInRight">3283 De La Cruz Blvd Suite J., Santa Clara, Ca 95054</p>
+					<p class="animated bounceInLeft">Toll Free (800) 238-4727</p>
+					<p class="animated bounceInRight">Fax: (408) 436-7943</p>
+					<p class="animated bounceInLeft">info@psdistributors.com</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section id="contact">
         <div class="container">
