--- a/new/index.html
+++ b/new/index.html
@@ -45,11 +45,12 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll active"><a href="#navigation">Home</a></li> 
-						<li class="scroll"><a href="#about-us">About Us</a></li> 
-						<li class="scroll"><a href="#services">Products</a></li> 
+						<li class="scroll active"><a href="#navigation">Home</a></li>
+						<li class="scroll"><a href="#about-us">About Us</a></li>						
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Testimonials</a></li> 
+						<li class="scroll"><a href="#clients">Testimonials</a></li>
+						<li><a href="catalog.html">Products</a></li> 
+						<li><a href="contact.html">Contact</a></li>
 					</ul> 
 				</div> 
 			</div> 
@@ -99,12 +100,13 @@
 
 </section><!--/#home-->
 
-<section id="about-us">
-	<div class="container">
-		<div class="text-center">
-			<div class="col-sm-8 col-sm-offset-2">
-				<h2 class="title-one">About Us</h2>
-				<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
+	<section id="about-us">
+		<div class="container">
+			<div class="text-center">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2 class="title-one">About Us</h2>
+					<p>PCS Distributors provides high quality flooring with exceptional customer service and satisfaction.</p>
+				</div>
 			</div>
 		</div>
 	</section><!--/#about-us-->
@@ -113,8 +115,6 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
-					<h2 class="title-one">Products</h2>
-					<p>Placeholder</p>
 				</div>
 			</div>
 			<div class="row">
