--- a/new/contact.html
+++ b/new/contact.html
@@ -45,10 +45,10 @@
 				</div> 
 				<div class="collapse navbar-collapse"> 
 					<ul class="nav navbar-nav navbar-right"> 
-						<li class="scroll"><a href="#navigation">Home</a></li>
-						<li class="scroll"><a href="#about-us">About Us</a></li>						
-						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
-						<li class="scroll"><a href="#clients">Testimonials</a></li>
+						<li class="scroll"><a href="index.html">Home</a></li>
+						<li class="scroll"><a href="index.html">About Us</a></li>						
+						<li class="scroll"><a href="index.html">Portfolio</a></li> 
+						<li class="scroll"><a href="index.html">Testimonials</a></li>
 						<li><a href="catalog.html">Products</a></li> 
 						<li class="scroll active"><a href="contact.html">Contact</a></li>
 					</ul> 
