--- a/new/index.html
+++ b/new/index.html
@@ -156,176 +156,133 @@
 		</section><!--/#service-->
 
 
-		<section id="portfolio">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-sm-8 col-sm-offset-2">
-						<h2 class="title-one">Portfolio</h2>
-						<p>Here is a display of some of the excellent work produced by PCS Distributors.</p>
+	<section id="portfolio">
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px"> 
+					<br>
+					<h2 class="title-one animated bounceInDown">Catalog</h2>
+				</div>
+			</div>
+			<ul class="portfolio-filter text-center">
+				<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".wood">Wood</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".carpet">Carpet</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".laminate">Laminate</a></li>
+				<li><a class="btn btn-default" href="#" data-filter=".logo">Logo Mats</a></li>
+			</ul><!--/#portfolio-filter-->
+			<div class="portfolio-items">
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item1.jpg" rel="image1URL" data-gallery="prettyPhoto" title="description1 description1 description1 description1 description1 ">
+								<img src="images/portfolio/1.jpg" alt="title1 ,msdnfskjdf;ljsldjfsdjflkskfjlskdfj"/> 		
+							</a>
+						</div>
 					</div>
 				</div>
-				<ul class="portfolio-filter text-center">
-					<li><a class="btn btn-default active" href="#" data-filter="*">All</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".wood">Wood</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".carpet">Carpet</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".laminate">Laminate</a></li>
-					<li><a class="btn btn-default" href="#" data-filter=".logo">Logo Mats</a></li>
-				</ul><!--/#portfolio-filter-->
-				<div class="portfolio-items">
-					<div class="col-sm-3 col-xs-12 portfolio-item wood">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/1.jpg" alt=""></div> 
-								<div class="mask text-center">
-									<h3>Product</h3>
-									<h4>Product Description</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item1.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-							</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
-							<div class="view efffect" >
-								<div class="portfolio-image">
-									<img src="images/portfolio/2.jpg" alt="">
-								</div> 
-								<div class="mask text-center">
-									<h3>Product</h3>
-									<h4>Product Description</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item2.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item carpet">
-							<div class="view efffect">
-								<div class="portfolio-image">
-									<img src="images/portfolio/3.jpg" alt="">
-								</div> 
-								<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item3.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item logo">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/4.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item4.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wood">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/5.jpg" alt="">
-							</div> <div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item5.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
+					<div class="view efffect" >
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item2.jpg" rel="image2URL" data-gallery="prettyPhoto"  title="description2">
+								<img src="images/portfolio/2.jpg" alt="title2"/> 		
+							</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/6.jpg" alt="">
+							<a class="portfolioAnchor" href="images/portfolio/big-item3.jpg" rel="image3URL" data-gallery="prettyPhoto" title="description3">
+								<img src="images/portfolio/3.jpg" alt="title3">
+							</a>
 						</div> 
-						<div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item6.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item logo">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item4.jpg" rel="image4URL" data-gallery="prettyPhoto" title="description4">
+								<img src="images/portfolio/4.jpg" alt="title4">
+							</a>
+						</div> 
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item wood">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/7.jpg" alt="">
+							<a class="portfolioAnchor" href="images/portfolio/big-item5.jpg" rel="image5URL" data-gallery="prettyPhoto" title="description5">
+								<img src="images/portfolio/5.jpg" alt="title5">
+							</a>
 						</div> 
-						<div class="mask text-center">
-							<h3>Product</h3>
-							<h4>Product Description</h4>
-							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item7.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-						</div>
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item6.jpg" rel="image6URL" data-gallery="prettyPhoto" title="description6">
+								<img src="images/portfolio/6.jpg" alt="title6">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item7.jpg" rel="image7URL" data-gallery="prettyPhoto" title="description7">
+								<img src="images/portfolio/7.jpg" alt="title7">
+							</a>
+						</div> 
 					</div>
 				</div>
 				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/8.jpg" alt=""></div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item8.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item wood">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/9.jpg" alt="">
-							</div> 
-							<div class="mask text-center">
-								<h3>Product</h3>
-								<h4>Product Description</h4>
-								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item9.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3 col-xs-12 portfolio-item carpet">
-						<div class="view efffect">
-							<div class="portfolio-image">
-								<img src="images/portfolio/10.jpg" alt=""></div> 
-								<div class="mask text-center">
-									<h3>Product</h3>
-									<h4>Product Description</h4>
-									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item10.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item laminate">
-							<div class="view efffect">
-								<div class="portfolio-image">
-									<img src="images/portfolio/11.jpg" alt=""></div> 
-									<div class="mask text-center">
-										<h3>Product</h3>
-										<h4>Product Description</h4>
-										<a href="#"><i class="fa fa-link"></i></a>
-										<a href="images/portfolio/big-item11.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-3 col-xs-12 portfolio-item logo">
-								<div class="view efffect">
-									<div class="portfolio-image">
-										<img src="images/portfolio/12.jpg" alt=""></div> 
-										<div class="mask text-center">
-											<h3>Product</h3>
-											<h4>Product Description</h4>
-											<a href="#"><i class="fa fa-link"></i></a>
-											<a href="images/portfolio/big-item12.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
+							<a class="portfolioAnchor" href="images/portfolio/big-item8.jpg" rel="image8URL" data-gallery="prettyPhoto" title="description8">
+								<img src="images/portfolio/8.jpg" alt="title8">
+							</a>
 						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item wood">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item9.jpg" rel="image9URL" data-gallery="prettyPhoto" title="description9">
+								<img src="images/portfolio/9.jpg" alt="title9">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item carpet">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item10.jpg" rel="image10URL" data-gallery="prettyPhoto" title="description10">
+								<img src="images/portfolio/10.jpg" alt="title10">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item laminate">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item11.jpg" rel="image11URL" data-gallery="prettyPhoto" title="description11">
+								<img src="images/portfolio/11.jpg" alt="title11">
+							</a>
+						</div> 
+					</div>
+				</div>
+				<div class="col-sm-3 col-xs-12 portfolio-item logo">
+					<div class="view efffect">
+						<div class="portfolio-image">
+							<a class="portfolioAnchor" href="images/portfolio/big-item12.jpg" rel="image12URL" data-gallery="prettyPhoto" title="description12">
+								<img src="images/portfolio/12.jpg" alt="title12">
+							</a>
+						</div> 
+					</div>
+				</div>
 
-					</section> <!--/#portfolio-->
+			</div> 
+		</section> <!--/#portfolio-->
 
 					<section id="clients" class="parallax-section">
 						<div class="container">
