--- a/new/databaseInsertTemplate.html
+++ b/new/databaseInsertTemplate.html
@@ -35,7 +35,7 @@
 		</div>
 	</div><!--/.preloader-->
 	<header id="navigation"> 
-		<div class="navbar navbar-inverse navbar-fixed-top" role="banner"> 
+		<div class="navbar navbar-inverse navbar-fixed-top" role="banner">
 			<div class="container"> 
 				<div class="navbar-header"> 
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="text-center">
 				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px;">
-					<h2 class="title-one animated bounceInRight">Insert products to database</h2>
+					<h2 class="title-one animated bounceInLeft">Insert products to database</h2>
 				</div>
 			</div>
 		</div>
@@ -73,7 +73,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Query form</h1>
                     <p class="lead">Enter product information to be inserted</p>
-						<form id="query-form" method="post" action="queryTemplate.php" role="form">
+						<form id="queryInsert-form" method="post" action="databaseInsertTemplate.php" role="form" enctype="multipart/form-data">
 
 						    <div class="messages"></div>
 
@@ -106,23 +106,37 @@
 						            <div class="col-md-6">
 						                <div class="form-group">
 						                    <label for="form_picture">Picture *</label>
-						                    <input id="form_picture" type="text" name="picture" class="form-control" placeholder="Please enter picture location" required="required" data-error="Pictures are required">
-						                    <div class="help-block with-errors"></div>
+						                    <input id="form_picture" type="file" name="picture[]" class="fileupload1" required="required" data-error="Pictures are required">
+						                    <div class="help-block with-errors"></div>						                    
 						                </div>
 						            </div>
 						        </div>
 						        <div class="row">
-						            <div class="col-md-6">
-						                <div class="form-group">
-						                    <label for="form_colors">Colors *</label>
-						                    <input id="form_colors" name="colors" class="form-control" placeholder="Please enter colors" required="required" data-error="Colors are required"></input>
-						                    <div class="help-block with-errors"></div>
-						                </div>
+						            <div class="col-md-6">						             
+						                    <ul class="nav nav-tabs">
+												<li class="active"><a data-toggle="tab" href="#colorimages">Colors (Images)</a></li>
+												<li><a data-toggle="tab" href="#colorcode">Color (Codes/Names)</a></li>
+											</ul>
+											<div class="tab-content">
+												<div class="form-group">
+													<div id="colorimages" class="tab-pane fade in active">
+									                    <input id="form_colors" type="file" name="colors[]" class="fileupload2" placeholder="Please enter colors"></input>
+									                    <div class="help-block with-errors"></div>
+													</div>
+												</div>
+												<div class="form-group">
+													<div id="colorcodes" class="tab-pane fade in">
+									                    <input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes"></input>
+									                    <button type="button" class="colorbutton">Add another code</button>
+									                    <div class="help-block with-errors"></div>
+									                </div>
+								            	</div>
+											</div>		                							                
 						            </div>
 						            <div class="col-md-6">
 						                <div class="form-group">
-						                    <label for="form_type">ID *</label>
-						                    <input id="form_type" type="number" min="0" max="100000" name="id" class="form-control" placeholder="Please enter product ID" required="required" data-error="ID is required.">
+						                    <label for="form_type">ID</label>
+						                    <input id="form_type" type="number" min="0" max="100000" name="id" class="form-control" placeholder="Please enter product ID" data-error="ID is wrong. Try again.">
 						                    <div class="help-block with-errors"></div>
 						                </div>
 						            </div>
@@ -139,17 +153,17 @@
 						        <div class="row">
 						            <div class="col-md-12">
 						                <div class="form-group">
-						                    <label for="form_picture">Description *</label>
-						                    <textarea id="form_picture" type="text" name="description" class="form-control" placeholder="Please enter picture location" rows="4" required="required" data-error="Description is required"></textarea>
+						                    <label for="form_description">Description *</label>
+						                    <textarea id="form_description" type="text" name="description" class="form-control" placeholder="Please enter product description" rows="4" required="required" data-error="Description is required"></textarea>
 						                    <div class="help-block with-errors"></div>
 						                </div>
 						            </div>
 						        </div>
 						            <div class="col-md-12">
-						                <input type="submit" class="btn btn-success btn-send" value="Send message">
+						                <input type="submit" class="btn btn-success btn-send" value="Insert Product">
 						            </div>
 						        <div class="row">
-						            <div class="col-md-12">
+						            <div class="col-md-12"><br>
 						                <p class="text-muted"><strong>*</strong> These fields are required.</p>
 						            </div>
 						        </div>
@@ -180,4 +194,15 @@
     <script src="validator.js"></script>
     <script src="contact.js"></script>
 </body>
+<script>
+	$('#query-form').delegate('input.fileupload1', 'change', function(){
+	  $('form input.fileupload1').last().after($('<input type="file" name="picture[]" class="fileupload1" />'));
+	});
+	$('#query-form').delegate('input.fileupload2', 'change', function(){
+	  $('form input.fileupload2').last().after($('<input type="file" name="colors[]" class="fileupload2" />'));
+	});
+	$('#query-form').delegate('button.colorbutton', 'click', function(){
+	  $('form input.colorinput').last().after($('<input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes" required="required" data-error="Valid color code is required." />'));
+	});
+</script>
 </html>
