--- a/new/databaseRemoveTemplate.html
+++ b/new/databaseRemoveTemplate.html
@@ -35,7 +35,7 @@
 		</div>
 	</div><!--/.preloader-->
 	<header id="navigation"> 
-		<div class="navbar navbar-inverse navbar-fixed-top" role="banner"> 
+		<div class="navbar navbar-inverse navbar-fixed-top" role="banner">
 			<div class="container"> 
 				<div class="navbar-header"> 
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
@@ -61,12 +61,7 @@
 		<div class="container">
 			<div class="text-center">
 				<div class="col-sm-8 col-sm-offset-2" style="margin-top:75px;">
-					<h2 class="title-one animated bounceInLeft">Contact Information</h2>
-					<p class="animated bounceInLeft">(408) 436-7940</p>
-					<p class="animated bounceInRight">3283 De La Cruz Blvd Suite J., Santa Clara, Ca 95054</p>
-					<p class="animated bounceInLeft">Toll Free (800) 238-4727</p>
-					<p class="animated bounceInRight">Fax: (408) 436-7943</p>
-					<p class="animated bounceInLeft">info@pcsdistributors.com</p>
+					<h2 class="title-one animated bounceInLeft">Remove products from database</h2>
 				</div>
 			</div>
 		</div>
@@ -74,66 +69,35 @@
 
 	<section id="contact">
         <div class="container">
-            <div class="row">
+            <div class="row col-sm-8 col-sm-offset-2 text-center">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Contact form</h1>
-                    <p class="lead">Enter your contact information to contact PCSDistributors</p>
-						<form id="contact-form" method="post" action="contact.php" role="form">
+                    <h1>Query form</h1>
+                    <p class="lead">Enter product information to be removed</p>
+						<form id="queryRemove-form" method="post" action="databaseRemoveTemplate.php" role="form" enctype="multipart/form-data">
 
 						    <div class="messages"></div>
 
 						    <div class="controls">
 
 						        <div class="row">
-						            <div class="col-md-6">
+						            <div class="col-sm-8 col-sm-offset-2">
 						                <div class="form-group">
-						                    <label for="form_name">Firstname *</label>
-						                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
-						                    <div class="help-block with-errors"></div>
-						                </div>
-						            </div>
-						            <div class="col-md-6">
-						                <div class="form-group">
-						                    <label for="form_lastname">Lastname *</label>
-						                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+						                    <label for="form_id">Product ID *</label>
+						                    <input id="form_id" type="text" name="id" class="form-control" placeholder="Please enter product ID number" required="required" data-error="ID is required.">
 						                    <div class="help-block with-errors"></div>
 						                </div>
 						            </div>
 						        </div>
+					            <div class="col-md-12">
+						                <input type="submit" class="btn btn-success btn-send" value="Remove Product">
+						            </div>
 						        <div class="row">
-						            <div class="col-md-6">
-						                <div class="form-group">
-						                    <label for="form_email">Email *</label>
-						                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-						                    <div class="help-block with-errors"></div>
-						                </div>
-						            </div>
-						            <div class="col-md-6">
-						                <div class="form-group">
-						                    <label for="form_phone">Phone</label>
-						                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
-						                    <div class="help-block with-errors"></div>
-						                </div>
-						            </div>
-						        </div>
-						        <div class="row">
-						            <div class="col-md-12">
-						                <div class="form-group">
-						                    <label for="form_message">Message *</label>
-						                    <textarea id="form_message" name="message" class="form-control" placeholder="Message *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
-						                    <div class="help-block with-errors"></div>
-						                </div>
-						            </div>
-						            <div class="col-md-12">
-						                <input type="submit" class="btn btn-success btn-send" value="Send message">
-						            </div>
-						        </div>
-						        <div class="row">
-						            <div class="col-md-12">
+						            <div class="col-md-12"><br>
 						                <p class="text-muted"><strong>*</strong> These fields are required.</p>
 						            </div>
 						        </div>
 						    </div>
+
 						</form>
                 </div>
             </div>
@@ -159,4 +123,15 @@
     <script src="validator.js"></script>
     <script src="contact.js"></script>
 </body>
+<script>
+	$('#query-form').delegate('input.fileupload1', 'change', function(){
+	  $('form input.fileupload1').last().after($('<input type="file" name="picture[]" class="fileupload1" />'));
+	});
+	$('#query-form').delegate('input.fileupload2', 'change', function(){
+	  $('form input.fileupload2').last().after($('<input type="file" name="colors[]" class="fileupload2" />'));
+	});
+	$('#query-form').delegate('button.colorbutton', 'click', function(){
+	  $('form input.colorinput').last().after($('<input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes" required="required" data-error="Valid color code is required." />'));
+	});
+</script>
 </html>
