--- a/new/databaseInsertTemplate.html
+++ b/new/databaseInsertTemplate.html
@@ -118,14 +118,14 @@
 												<li><a data-toggle="tab" href="#colorcode">Color (Codes/Names)</a></li>
 											</ul>
 											<div class="tab-content">
-												<div class="form-group">
-													<div id="colorimages" class="tab-pane fade in active">
-									                    <input id="form_colors" type="file" name="colors[]" class="fileupload2" placeholder="Please enter colors"></input>
+												<div id="colorimages" class="tab-pane fade in active">
+													<div class="form-group">													
+									                    <input id="form_colors" type="file" name="colors[]" class="form-control-file fileupload2" placeholder="Please enter colors"></input>
 									                    <div class="help-block with-errors"></div>
 													</div>
 												</div>
-												<div class="form-group">
-													<div id="colorcodes" class="tab-pane fade in">
+												<div id="colorcode" class="tab-pane fade in">
+													<div class="form-group">													
 									                    <input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes"></input>
 									                    <button type="button" class="colorbutton">Add another code</button>
 									                    <div class="help-block with-errors"></div>
@@ -195,13 +195,13 @@
     <script src="contact.js"></script>
 </body>
 <script>
-	$('#query-form').delegate('input.fileupload1', 'change', function(){
+	$('#queryInsert-form').delegate('input.fileupload1', 'change', function(){
 	  $('form input.fileupload1').last().after($('<input type="file" name="picture[]" class="fileupload1" />'));
 	});
-	$('#query-form').delegate('input.fileupload2', 'change', function(){
+	$('#queryInsert-form').delegate('input.fileupload2', 'change', function(){
 	  $('form input.fileupload2').last().after($('<input type="file" name="colors[]" class="fileupload2" />'));
 	});
-	$('#query-form').delegate('button.colorbutton', 'click', function(){
+	$('#queryInsert-form').delegate('button.colorbutton', 'click', function(){
 	  $('form input.colorinput').last().after($('<input id="form_colorcodes" type="text" name="colorcodes[]" class="colorinput form-control" placeholder="Please enter color codes" required="required" data-error="Valid color code is required." />'));
 	});
 </script>
