--- a/new/index.html
+++ b/new/index.html
@@ -49,7 +49,7 @@
 						<li class="scroll"><a href="#about-us">About Us</a></li>						
 						<li class="scroll"><a href="#portfolio">Portfolio</a></li> 
 						<li class="scroll"><a href="#clients">Testimonials</a></li>
-						<li><a href="catalog.html">Products</a></li> 
+						<li><a href="productMenu.php">Products</a></li> 
 						<li><a href="contact.html">Contact</a></li>
 					</ul> 
 				</div> 
